--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Joe Streifel <josephstreifel@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-ptw = "^1.0.1"
+pytest-watch = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
